@@ -1,3 +1,8 @@
+2006-02-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ia64-gen.c: Update copyright years.
+	* ia64-opc-b.c: Likewise.
+
 2006-02-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ia64-gen.c (lookup_regindex): Handle ".vm".
